Fluentd config is changed

--- a/fluentd/config/fluent.conf
+++ b/fluentd/config/fluent.conf
@@ -4,19 +4,17 @@
   bind 0.0.0.0
 </source>
 
-<match *.**>
+<match **>
   @type copy
   <store>
     @type elasticsearch
     host elasticsearch
     port 9200
-    logstash_format true
-    logstash_prefix fluentd
-    logstash_dateformat %Y%m%d
+    index_name order
+    type_name order
     include_tag_key true
-    type_name access_log
     tag_key @log_name
-    flush_interval 1s
+    flush_interval 2s
   </store>
 
   <store>
